--- a/src/App.css
+++ b/src/App.css
@@ -38,11 +38,12 @@
 }
 
 body{
-  background-color: #f0f0f0;
   font-family: 'Roboto', sans-serif;
+  background: linear-gradient(180deg, rgba(9,9,121,1) 0%, rgba(40,44,52,1) 100%);
   font-size: 1.2rem;
   margin: 0;
   padding: 0;
+  width: 100vw;
 }
 
 .cards{
@@ -71,3 +72,28 @@ body{
   background-color: rgba(0, 0, 0, .1);
 }
 
+.mainContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  margin: 0 auto;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  padding: 0px;
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  font-weight: 500;
+  color: #333;
+  font-size: 1.2rem;
+  line-height: 1.5;
+  letter-spacing: 1px;
+  text-transform: capitalize;
+  gap: 2rem;
+}
+
+.mainContainer > *  {
+  margin-top: 2rem;
+}
