--- a/src/DailyForecast.css
+++ b/src/DailyForecast.css
@@ -1,4 +1,4 @@
-.hourlyForecastContainer {
+.dailyForecastContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -20,7 +20,7 @@
     text-transform: capitalize;
 }
 
-.hourlyForecastContainer h1 {
+.dailyForecastContainer h1 {
     font-size: 2rem;
     font-weight: 500;
     margin: 1rem;
@@ -37,16 +37,17 @@
 }
 
 
-.hourlyModules {
+.dailyForecastModules {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     margin: 0 auto;
-    width: 100%;
+    width: 95%;
     height: 100%;
     background-color: #fff;
     border-radius: 10px;
+    padding: 20px;
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     font-weight: 500;
@@ -57,13 +58,17 @@
     text-transform: capitalize;
 }
 
-.hourlyModules img {
-    width: 50px;
-    height: 50px;
+
+.dailyForecastModule {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    place-items: center;
+    font-size: medium;
 }
 
-
-.hourlyModule {
-    display: flex;
-    flex-direction: column;
+#dailyGridHeader {
+    border-bottom: 1px solid black;
 }
