--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
 body {
-  margin: 0;
+  margin: 0px;
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding: 0px;
+  width: 100vw;
+  color: rbga(0, 0, 0, 0);
 }
 
 code {
